--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.hbmcc.wangsen.netsupport"
         minSdkVersion 22
         targetSdkVersion 28
-        versionCode 2
-        versionName "20190830"
+        versionCode 20190910
+        versionName "20190910"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     //百度SDK 不混淆
@@ -60,6 +60,8 @@ dependencies {
     implementation files('libs/IndoorscapeAlbumPlugin.jar')
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.3'
-    implementation 'com.google.code.gson:gson:2.8.2'
     //添加Gson依赖  依赖全部统一用implementation
+    implementation 'com.google.code.gson:gson:2.8.2'
+    //Android工具类
+    implementation 'com.blankj:utilcode:1.25.8'
 }
