--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,14 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':library')
-    implementation 'com.android.support:appcompat-v7:28+'
+    implementation 'com.android.support:appcompat-v7:28.+'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
-    implementation 'com.android.support:recyclerview-v7:28+'
-    implementation 'com.android.support:support-v4:28+'
+    implementation 'com.android.support:recyclerview-v7:28.+'
+    implementation 'com.android.support:support-v4:28.+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:28+'
+    implementation 'com.android.support:design:28.+'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
     implementation 'me.yokeyword:fragmentation:1.3.4'
@@ -82,7 +82,7 @@ dependencies {
     //百度地图相关jar包
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/IndoorscapeAlbumPlugin.jar')
-    implementation 'com.android.support:cardview-v7:28+'
+    implementation 'com.android.support:cardview-v7:28.+'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     //添加Gson依赖  依赖全部统一用implementation
     implementation 'com.google.code.gson:gson:2.8.6'
