--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     //Android工具类
     implementation 'com.blankj:utilcode:1.25.8'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
+    implementation 'liji.library.dev:citypickerview:5.1.0'
 }
