--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,30 +16,24 @@ android {
             jniLibs.srcDir 'libs'
         }
     }
+
 //    android {
-//        buildToolsVersion "29.0.0"
+//        buildToolsVersion "28.0.0"
 //    }
 
     android { compileOptions.encoding = "UTF-8" }
-    compileSdkVersion 29
+    compileSdkVersion 28
     defaultConfig {
         multiDexEnabled true
         applicationId "com.hbmcc.wangsen.netsupport"
         minSdkVersion 23
-        targetSdkVersion 29
-        versionCode 191129
-        versionName "191129"
+        targetSdkVersion 28
+        versionCode 200115
+        versionName "200115"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    //百度SDK 不混淆
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
 
-    //自动生成指定名称的release发布版的 apk文件
+        //自动生成指定名称的release发布版的 apk文件
     android.applicationVariants.all { variant ->
         def appName
         if (project.hasProperty("applicationName")){
@@ -51,19 +45,27 @@ android {
             outputFileName = "youyi.apk"
         }
     }
+
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':library')
-    implementation 'com.android.support:appcompat-v7:28.+'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta3'
-    implementation 'com.android.support:recyclerview-v7:28.+'
-    implementation 'com.android.support:support-v4:28.+'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support:design:28.+'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
     implementation 'me.yokeyword:fragmentation:1.3.4'
@@ -82,7 +84,7 @@ dependencies {
     //百度地图相关jar包
     implementation files('libs/BaiduLBS_Android.jar')
     implementation files('libs/IndoorscapeAlbumPlugin.jar')
-    implementation 'com.android.support:cardview-v7:28.+'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     //添加Gson依赖  依赖全部统一用implementation
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -90,5 +92,15 @@ dependencies {
     implementation 'com.blankj:utilcode:1.25.8'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     implementation 'liji.library.dev:citypickerview:5.1.0'
-    compile 'com.contrarywind:Android-PickerView:4.1.9'
+    implementation 'com.contrarywind:Android-PickerView:4.1.9'
 }
+
+
+
+
+
+
+
+
+
+
