--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,46 +18,33 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-      >
-
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="@string/baiduMapIdOffice" />
+
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-        <activity android:name="com.hbmcc.wangsen.netsupport.ui.fragment.fifth.bean.JsonDataActivity"/>
-        <activity android:name="com.hbmcc.wangsen.netsupport.ui.fragment.fifth.bean.FragmentTestActivity">
-
-
-        </activity>
-        <activity android:name="com.hbmcc.wangsen.netsupport.ui.fragment.fifth.bean.TestCircleWheelViewActivity" />
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote" />
-
     </application>
-
-
-
 
 </manifest>
